--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=/home/gustavofb/.netbeans/12.6/build.properties
+user.properties.file=C:\\Users\\gubec\\AppData\\Roaming\\NetBeans\\15\\build.properties
